Initial commit for FTP upload

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,16 @@ limitations under the License.
             <artifactId>jsch</artifactId>
             <version>0.1.44-1</version>
         </dependency>
+        <dependency>
+            <groupId>net.morimekta.utils</groupId>
+            <artifactId>android-util</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
